# launchpad_base

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/bucketbot_driver/: CliffEvent.h  Dockir.h
devel/lib/bucketbot_driver/: bucketbot_node
devel/lib/pkgconfig/: bucketbot_driver.pc
devel/lib/python2.7/dist-packages/bucketbot_driver/msg/: _CliffEvent.py  _Dockir.py  __init__.py
devel/share/bucketbot_driver/cmake/: bucketbot_driver-msg-extras.cmake  bucketbot_driver-msg-paths.cmake  bucketbot_driverConfig.cmake
devel/share/common-lisp/ros/bucketbot_driver/msg/: CliffEvent.lisp  Dockir.lisp  _package.lisp  _package_CliffEvent.lisp  _package_Dockir.lisp  bucketbot_driver-msg.asd
src/bucketbot_driver/: CMakeLists.txt  package.xml
src/bucketbot_driver/include/bucketbot_driver/: ir_hasher.h
src/bucketbot_driver/msg/: CliffEvent.msg  Dockir.msg
src/bucketbot_driver/src/: bucketbot_node.cpp  ir_hasher.cpp  rotary_encoder.cpp  test_ir_hasher.cpp
